--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
     --navbar-height:59px;
 
 }
+html{
+    scroll-behavior: smooth;
+}
 
 /* Navigation Bar */
 
@@ -79,7 +82,7 @@
     width: 100%;
     z-index: -1;
     opacity: 1.8;
-   
+
 }
 
 #home h1{
